Added NTP time synchronization: TimeManager library with NTPClient, automatic time sync after WiFi connection, formatted timestamps in logs, real-time clock display in web interface, and time endpoint API

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
     WiFiManager
     heman/AsyncMqttClient-esphome @ ^2.1.0
     bblanchon/ArduinoJson @ ^6.21.0
+    arduino-libraries/NTPClient @ ^3.2.1
 
 
 lib_extra_dirs = lib
