Improve firmware management and add native testing support
- Add logging to FirmwareUpdater::getAllFirmwareInfo for debugging
- Update HomeAssistant MQTT device info to use FireLabs branding
- Add logging to WebHandler firmware operations for better debugging
- Configure SPIFFS filesystem with 1MB storage for firmware files
- Add native testing environment with Unity test framework support
- Enable proper partition table and filesystem configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,14 @@ lib_deps =
 
 lib_extra_dirs = lib
 
+; SPIFFS Configuration - Preserve firmware files
+board_build.filesystem = spiffs
+board_build.partitions = default.csv
+board_build.spiffs_size = 1M
+
+[env:native]
+platform = native
+build_flags = -std=gnu++11 -DARDUINO=100
+lib_deps = 
+    throwtheswitch/Unity@^2.5.2
+
