--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -47,7 +47,7 @@ jobs:
         
         # Get git hash and version
         GIT_HASH=$(git rev-parse --short HEAD)
-        BASE_VERSION=$(grep 'FIRMWARE_VERSION' src/main.cpp | sed 's/.*"\([^"]*\)".*/\1/')
+        BASE_VERSION=$(grep 'FIRMWARE_VERSION' src/main.cpp | cut -d'"' -f2)
         FULL_VERSION="${BASE_VERSION}-${GIT_HASH}"
         
         echo "Version: $FULL_VERSION"
@@ -64,7 +64,7 @@ jobs:
     
     - name: Upload firmware artifacts
       if: github.ref == 'refs/heads/main'
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: firmware-${{ github.sha }}
         path: firmware-v*.bin
