--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -63,14 +63,14 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: firmware-${{ github.sha }}
-        path: firmware-v*.bin
+        path: firmware-v1.0.0-*.bin
         retention-days: 30
     
     - name: Create GitHub Release
       if: github.ref == 'refs/heads/main'
       uses: softprops/action-gh-release@v1
       with:
-        files: firmware-v*.bin
+        files: firmware-v1.0.0-*.bin
         tag_name: v${{ github.sha }}
         name: Firmware Build ${{ github.sha }}
         body: |
