Add comprehensive OLED display integration
- Create OLEDManager library for SSD1306/SH1106 displays
- Auto-detect OLED at address 0x3C on I2C bus
- Display system info: uptime, RAM, WiFi status, IP address
- Show WiFi details: SSID, signal strength, MAC address
- Display I2C bus status with device count and identification
- Add web interface controls for OLED display modes
- Integrate OLED updates into main loop (every 2 seconds)
- Add OLED control buttons to main web interface
- Include Adafruit SSD1306 and GFX library dependencies
- OLED shows startup message and real-time system status

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
     WiFiManager
     heman/AsyncMqttClient-esphome @ ^2.1.0
     bblanchon/ArduinoJson @ ^6.21.0
+    adafruit/Adafruit SSD1306 @ ^2.5.0
+    adafruit/Adafruit GFX Library @ ^1.11.0
 
 
 lib_extra_dirs = lib
